--- a/.babelrc
+++ b/.babelrc
@@ -9,9 +9,9 @@
             "firefox": 60,
             "chrome": 67,
             "safari": 11.1
-          },
+          }
          
-          "useBuiltIns": "usage"
+          //"useBuiltIns": "usage"
         }
       ],
       "@babel/preset-react"
